restructured data_utils

--- a/src/synthetic_data_clustering.ipynb
+++ b/src/synthetic_data_clustering.ipynb
@@ -36,7 +36,7 @@
     "from statistics import mean\n",
     "from data_utils.generate_synthetic_data import make_point_clouds\n",
     "from gtda.homology import VietorisRipsPersistence\n",
-    "from vectorisation_methods import get_persistence_landscapes, get_betti_curves, get_persistence_images\n",
+    "from data_utils.vectorisation_methods import get_persistence_landscapes, get_betti_curves, get_persistence_images\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import adjusted_rand_score\n",
     "\n",
